# classfmt

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md
examples/: hello.rs
src/: access_flags.rs  attribute.rs  attributes.rs  constant_pool.rs  error.rs  field.rs  lib.rs  method.rs  opcode.rs  parser.rs  raw_class.rs
tests/: Fields.java  Hello.java  WithInnerClass.java
