[package]
name = "classfmt"
version = "0.2.0"
authors = ["chickenbreeder <chickenbreeder@users.noreply.github.com>"]
edition = "2018"
description = "A library for parsing Java class files"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/chickenbreeder/classfmt"
exclude = [
    "Makefile",
    "**/*.java"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
