[package]
name = "classfmt"
version = "0.5.0"
authors = ["chickenbreeder <chickenbreeder@users.noreply.github.com>"]
edition = "2018"
description = "A library for parsing Java class files"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/chickenbreeder/classfmt"
documentation = "https://docs.rs/classfmt"
exclude = [
    "Makefile",
    "**/*.java"
]

[dependencies]
bitflags = "1.2"
